name:                todo-webapp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/snap-tutorial#readme
license:             MIT
license-file:        LICENSE
author:              Omar García
maintainer:          neb.trx@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

library
  hs-source-dirs:      src
  exposed-modules:     Todo.Main
  other-modules:       Todo.Application
                     , Todo.Site
                     , Todo.Db
                     , Todo.Utilities
  build-depends:       base                      >= 4.7     && < 5
                     , bytestring                >= 0.9.1   && < 0.11
                     , heist                     >= 0.14    && < 0.15
                     , lens                      >= 4.12    && < 4.14
                     , mtl                       >= 2       && < 3
                     , snap                      >= 0.13    && < 0.15
                     , snap-core                 >= 0.9     && < 0.10
                     , snap-extras               >= 0.11    && < 0.12
                     , snap-server               >= 0.9     && < 0.10
                     , snap-loader-static        >= 0.9     && < 0.10
                     , text                      >= 0.11    && < 1.3
                     , xmlhtml                   >= 0.1     && < 0.3
                     , HDBC                      >= 2.3     && <= 2.5
                     , HDBC-sqlite3              == 2.3.*
                     , interpolate               >= 0.1 && < 0.2

  default-language:    Haskell2010

  if flag(development)
    build-depends:    snap-loader-dynamic == 0.10.*
    cpp-options:      -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options:  -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                    -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options:  -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                    -fno-warn-orphans

executable todo-webapp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todo-webapp
  default-language:    Haskell2010
